force-app/main/default/objects/ProvidedLedger__c/fields/Disaster__c.field-meta.xml
<CustomField>
    <fullName>Disaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>災害名</label>
    <referenceTo>Disaster__c</referenceTo>
    <relationshipLabel>支給台帳</relationshipLabel>
    <relationshipName>ProvidedLedgers</relationshipName>
    <type>Lookup</type>
</CustomField>