force-app/main/default/objects/ProvidedLedger__c/fields/ReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiptDate__c</fullName>
    <label>収受日</label>
    <type>Date</type>
</CustomField>