force-app/main/default/objects/ProvidedLedger__c/fields/ReceiptJournal__c.field-meta.xml
<CustomField>
    <fullName>ReceiptJournal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>収受番号</label>
    <referenceTo>ReceiptJournal__c</referenceTo>
    <relationshipLabel>支給台帳</relationshipLabel>
    <relationshipName>ProvidedLedgers</relationshipName>
    <type>Lookup</type>
</CustomField>