force-app/main/default/objects/ProvidedLedger__c/fields/RecordDuplicateString__c.field-meta.xml
<CustomField>
    <fullName>RecordDuplicateString__c</fullName>
    <description>審査時、申請内容が重複しないように確認を行う項目。</description>
    <formula>Disaster__r.Name  +  Ruby__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レコード重複判定項目</label>
    <type>Text</type>
</CustomField>